[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/global/dynamic_music_manager/dynamic_music_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/music/level_1/LEVEL 1 DAMAGED.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/music/level_1/LEVEL 1 DECREPIT.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/music/level_1/LEVEL 1 SOLID.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/music/main_menu/mainmenu.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=7]
resource_name = "damaged_fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.54912, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "damaged_to_eroded"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 5.46, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGM_3:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.143, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "damaged_to_solid"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 5.46, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGM_1:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.143, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "eroded_fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_3:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.54, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "eroded_to_damaged"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.143, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGM_3:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 5.46, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "eroded_to_solid"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_3:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 5.46, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGM_1:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.143, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGM_2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BGM_3:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "solid_fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.241484, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGM_2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BGM_3:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "solid_fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.54, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("BGM_1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 5.46416, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGM_2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.143587, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[node name="DynamicMusicManager" type="Node"]
script = ExtResource( 1 )
main_menu_bgm = ExtResource( 5 )
level_1_solid_bgm = ExtResource( 4 )
level_1_damaged_bgm = ExtResource( 2 )
level_1_eroded_bgm = ExtResource( 3 )

[node name="BGM_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0

[node name="BGM_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0

[node name="BGM_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damaged_fade_out = SubResource( 7 )
anims/damaged_to_eroded = SubResource( 8 )
anims/damaged_to_solid = SubResource( 9 )
anims/eroded_fade_out = SubResource( 10 )
anims/eroded_to_damaged = SubResource( 3 )
anims/eroded_to_solid = SubResource( 12 )
anims/solid = SubResource( 4 )
anims/solid_fade_in = SubResource( 11 )
anims/solid_fade_out = SubResource( 6 )
anims/solid_to_damaged = SubResource( 5 )
